# InsightAgent

./: .gitattributes  .gitignore  Dockerfile  README.md  checkpackages.py  csvtojson.py  deployInsightAgent.py  getmetrics.sh  getmetrics_docker.py  getmetrics_proc.py  index.yaml  initconfig.py  install.sh  installInsightAgent.py  makeAgentInstaller.sh  online-install.sh  reporting_config.json  startcron.py  stopcron.py
DataQuality-Demo/: .gitignore  TRANSFORMATION_RULES.md  config.yaml  convert_logs_to_json.py  dq-demo-script.py  requirements.txt  run_test.sh
Dell_agent/: agent.txt  bb  config.ini.template  get_message_metric.py  getmessage_Dell_metric.py  getmessages_Dell_POC_metric.py  gg.py  requirements.txt
IngestSentryEvents/: IngestSentryEvents.py  README.md
KafkaCollectorAgent/: Dockerfile  README  README.md  config-log-template.properties  config-metric-template.properties  config-visa-template.properties  config.properties  logback.xml  pom.xml
Mimosa/: .gitignore  README.md  advanced_login_test.py  agent.txt  cookies.txt  explore_mimosa_metrics.py  getmessages_mimosa.py  mimosa_insightfinder_data.json  mimosa_login_working.py  mimosa_metrics_data.json  mimosa_network_6078_endpoint_1.json  mimosa_network_6078_endpoint_2.json  requirements.txt  (+6 more)
ap-jira-asset-server/: .env.example  README.md  monitor.sh  pyproject.toml
ap-jira-asset-server/src/: database.py  jira_sync.py  main.py  models.py  repository.py
dataQualityAgent/: LICENSE  README.md  compose.yaml.template  pyproject.toml
dataQualityAgent/data_quality_agent/: config.py  logger.py  mapping.py
(+1894 files in other folders)
