[project]
name = "asset-registry-service"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "structlog>=24",
]

[tool.uv]
dev-dependencies = []
